[metadata]
name = xl
version = 0.0.5
url = https://github.com/t-c-w/xl
platforms = any
description_file = README.md
description = Parsing google results
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = xl

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

